# dizel

./: compose.yaml
.github/workflows/: main.yml
bot/: .gitignore  dockerfile  pyproject.toml
bot/src/: app.py
nginx.conf.d/: dizel.conf
site/: 152.txt  dockerfile  index.html
site/css/: main.css
site/g/basestyle/1.0.1/user/: user.css
site/g/libs/lightgallery/v1.6.8/: lightgallery.min.css
site/g/libs/owl-carousel/2.3.4/: owl.carousel.min.css
site/g/s3/lp/css/: lightgallery.min.css
site/g/s3/lp/js/: lp.core.js  one.line.menu.v.2.js
site/g/s3/lp/lp_new/css/: advantages_482261.css  advantages_500261.css  advantages_500861.css  advantages_504261.css  contacts_719461.css  contacts_720661.css  faq_438061.css  footer_429061.css  form_426061.css  form_482861.css  header_430861.css  header_432261.css  lp_styles.css  menu_490061.css  photo_454461.css  products_425261.css  products_429661.css  products_493061.css  products_500061.css  reviews_489061.css  sell_434061.css  sell_481661.css  sell_492861.css  sertificats_483261.css  sertificats_498461.css  steps_483861.css  text_426861.css  text_441461.css  text_497461.css
site/g/s3/lp/lp_new/js/: lp_ver2.js
site/g/s3/misc/eventable/0.0.1/: s3.eventable.js
site/g/s3/misc/math/0.0.1/: s3.math.js
site/g/shop2v2/default/css/: theme.less.css
site/g/shop2v2/default/js/: shop2.2.js
site/g/templates/shop2/1.46.2/js/: jquery-ui-1.10.3.custom.min.js
site/g/templates/shop2/2.68.2/js/: main_version2.js  plugins.min.js
