[project]
name = "bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nikmosi", email = "i@nikmosi.ru"},
]
dependencies = [
    "fastapi[all]>=0.115.0",
    "pyrogram>=2.0.106",
    "loguru>=0.7.2",
    "TgCrypto>=1.2.5",
    "google-cloud-recaptcha-enterprise>=1.22.1",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
